--- a/new.html
+++ b/new.html
@@ -1,5 +1,5 @@
 
-<!DOCTYPE html>
+!DOCTYPE html
 
 <html>
 <head>
@@ -12,4 +12,5 @@
 <h1>I am new, just like you.</h1>
 <p>I am not old.</p>
 
+</body>
 </html>
